--- a/Tex_RB/diagram_Fabian.tex
+++ b/Tex_RB/diagram_Fabian.tex
@@ -140,7 +140,7 @@
 \def\branchid{}
 \tikzsetnextfilename{figure_branch_\branchid}
 \begin{tikzpicture}
-\begin{axis}[xmin=2.0*10^4, xmax=10^5, ymin=0, ymax=1200, enlargelimits=false, x label style={at={(0.5,-0.07)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.4)},rotate=-90,anchor=south},ylabel={$\|\mathbf{u}\|_2^2$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.11em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}]
+\begin{axis}[xmin=2.0*10^4, xmax=10^5, enlargelimits=false, x label style={at={(0.5,-0.07)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.4)},rotate=-90,anchor=south},ylabel={$\|\mathbf{u}\|_2^2$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.11em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}]
 \addplot[blue,line width=0.6] table [col sep=comma, smooth,mark=none] {data/diagram_u/\branchid.csv};
 
 \node at (axis cs:3.3*10^4,400) (A1) {};
@@ -162,7 +162,7 @@
     {\includegraphics[width=.1\textwidth]{data/Figure_paper/34/u_100000.png}};
 \end{axis}
 
-\begin{axis}[yshift=-105mm, yscale=0.45, xmin=2*10^4, xmax=10^5, ymin=-50, ymax=200, ytick distance=50, enlargelimits=false, x label style={at={(0.5,-0.3)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.8)},rotate=-90,anchor=south},ylabel={$\mathcal{R}(\lambda)$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.86em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}, ]
+\begin{axis}[yshift=-105mm, yscale=0.45, xmin=2*10^4, xmax=10^5, ymin=-50, ytick distance=50, enlargelimits=false, x label style={at={(0.5,-0.3)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.8)},rotate=-90,anchor=south},ylabel={$\mathcal{R}(\lambda)$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.86em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}, ]
 
 \pgfplotsset{cycle list set=1}
 \foreach \i in {2,3,4,5,6}{
@@ -180,7 +180,7 @@
 \end{axis}
 
 %%
-\begin{axis}[xshift=95mm, xmin=2*10^4, xmax=10^5, ymin=0.3, ymax=0.34, enlargelimits=false, x label style={at={(0.5,-0.07)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.4)},rotate=-90,anchor=south},ylabel={$\|T\|_2^2$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.11em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}]
+\begin{axis}[xshift=95mm, xmin=2*10^4, xmax=10^5, enlargelimits=false, x label style={at={(0.5,-0.07)}}, xlabel={$\textrm{Ra}$},y label style={at={(-0.2,0.4)},rotate=-90,anchor=south},ylabel={$\|T\|_2^2$}, every x tick scale label/.style={at={(xticklabel cs:1)},anchor=south west, yshift=-0.11em},xtick scale label code/.code={\pgfmathparse{int(#1)}$\times 10^{\pgfmathresult}$}]
 \addplot[blue,line width=0.6] table [col sep=comma, smooth,mark=none] {data/diagram_T/\branchid.csv};
     
 \node at (axis cs:3*10^4,0.315) (A1) {};
